--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,19 @@
+on: 
+ push:
+   branches:
+    - master  
 
+
+
+
+
+
+jobs:
+ build:
+    runs-on: ubun-latest 
+
+    steps:  
+      - name: 'Testing Githup action'
+        run: pwd
+        - name: 'Testing Githup printing'
+        run: echo mohamed
