--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
  build:
-    runs-on: ubun-latest 
+    runs-on: ubuntu-latest 
 
     steps:  
       - name: 'Testing Githup action'
