--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,8 @@ jobs:
 
       - name: 'Login in dockerhup'
         run: docker login --username ${{ secrets.USERNAME }}  --password ${{ secrets.PASSWORD }}
+        
+        - name: "Build Docker image"
+          run: docker build -t ${{ secrets.USERNAME }}/myimage .
+          - name: "Push to docker hub"
+            run: docker push ${{ secrets.USERNAME }}/myimage
