--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
     runs-on: ubuntu-latest 
 
     steps:  
-      
+
+      - uses: actions/checkout@v3
+
       - name: 'Login in dockerhup'
         run: docker login --username ${{ secrets.USERNAME }} --password ${{ secrets.PASSWORD }}
         
